Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6433

MDS deadlock in qouta

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      With new quota code MDS obtains quota credits via ptlrpc requests.
      All quota operation takes place after obtaining ldlm lock.
      So, with single MDS it can happen that we are run out of mdt threads to process quota request while all other mdt threads are waiting for a lock conflicting with a lock taken by a thread which is sending quota request.

      The possible solution is to serve quota requests in a HP queue. It looks like quota lock doesn't conflicts, so quota intends can be processed in a HP queue also.

            niu Niu Yawei (Inactive)
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: