LU-6433 quota: handle QUOTA_DQACQ in hp queue

MDS sends quota request to quota master, which can be
the same host. Deadlock is possible if all other MDS
threads are waiting for lock taken by first thread.

Change-Id: Ib2266a6771cfc5a70bae23206b1144bfd45f9ff3
Xyratex-bug-id: MRP-2433
Signed-off-by: Andriy Skulysh <andriy.skulysh@seagate.com>